@@ -24,6 +24,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #14938: importlib.abc.SourceLoader.is_package() will not consider a
+  module whose name ends in '__init__' a package (e.g. importing pkg.__init__
+  directly should be considered a module, not a package).
+
 - Issue #14982: Document that pkgutil's iteration functions require the
   non-standard iter_modules() method to be defined by an importer (something
   the importlib importers do not define).
